Updated for JDK17 upgrade.